<resources>
    <string name="app_name">Ann Arbor Parking</string>
    <string name="title_activity_maps">Ann Arbor Parking</string>
    <string name="action_settings">Settings</string>

    <string name="pref_category_about">About</string>

    <!--Settings-->
    <string name="pref_web_page">Developer Website</string>
    <string name="pref_web_page_url">http://www.todddeland.com</string>

    <string name="pref_email_developer_key">pref_email_developer_key</string>
    <string name="pref_email_developer">Contact Developer</string>
    <string name="pref_email_developer_subject">Feedback from Ann Arbor Parking</string>
    <string-array name="pref_email_developer_addresses">
        <item>todd@sliverbit.com</item>
    </string-array>

    <string name="pref_version_key">pref_version</string>
    <string name="pref_version">Version</string>
    <string name="title_activity_settings">Settings</string>

    <!--Bottom Sheet info-->
    <string name="total_spaces">"Total Spaces: %1s"</string>
    <string name="handicap_spaces">"Handicap Spaces: %1s"</string>
    <string name="weekend_parking">"Weekend Parking: %1s"</string>
    <string name="quick_pay">"Quick Pay: %1s"</string>
    <string name="validation">"Validation: %1s"</string>
    <string name="height_restriction">"Height Restriction: %1s"</string>
    <string name="public_parking">"Public Parking: %1s"</string>
    <string name="monthly_parking">"Monthly Parking: %1s"</string>
    <string name="electric_charging">"Electric Charging: %1s"</string>
    <string name="bicycle_parking">"Bicycle Parking: %1s"</string>
    <string name="moped_parking">"Moped Parking: %1s"</string>
    <string name="note">"Note: %1s"</string>

    <!--Error snack bar-->
    <string name="retry">Retry</string>
    <string name="error_availability">Unable to load availability.</string>
</resources>
